fix openapi.json file and add language in query and response
